recursion.cons.lessons.recursion.cons.Remove.scala.error
remove:4: error: value head_= is not a member of List[Int]
	if(l.head = v)
             ^remove:7: error: type mismatch;
 found   : Int
 required: List[Int]
	return remove(l.head, v);
                        ^